--- a/src/style.css
+++ b/src/style.css
@@ -46,9 +46,13 @@ body{
 }
 
 #webgl{
+    position: fixed;
+    top:0;
+    left:0;
     width: 100%;
     height: 100%;
     background-color: #3a3a3a;
+    outline: none;
 }
 
 #sidepane{
